[gd_scene load_steps=4 format=3 uid="uid://dv5ogk47lc0xq"]

[ext_resource type="Script" uid="uid://wanaw22871nw" path="res://Scripts/Player/entity.gd" id="1_fkd2v"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5v2c3"]
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_5v2c3"]

[node name="Entity" type="Node3D"]
script = ExtResource("1_fkd2v")

[node name="ShadowCaster" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.220591, 0)
cast_shadow = 3
mesh = SubResource("CapsuleMesh_5v2c3")

[node name="LightDetector" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_mask = 4

[node name="Hitbox" type="CollisionShape3D" parent="LightDetector"]
shape = SubResource("CapsuleShape3D_5v2c3")
debug_color = Color(1, 0, 0, 0.419608)

[node name="DisappearTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="LightDetector" to="." method="_on_light_detector_area_entered"]
[connection signal="area_exited" from="LightDetector" to="." method="_on_light_detector_area_exited"]
[connection signal="timeout" from="DisappearTimer" to="." method="_on_disappear_timer_timeout"]
